changed camera management

--- a/HeadController/res/layout/activity_html_screen.xml
+++ b/HeadController/res/layout/activity_html_screen.xml
@@ -16,4 +16,11 @@
         android:layout_marginLeft="100dp"
         android:layout_width="200dp"
         android:layout_height="200dp"/>
+    
+    <SurfaceView 
+        android:id="@+id/CameraPreview"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="600dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"/>
 </FrameLayout>
