--- a/HeadController/res/layout/activity_html_screen.xml
+++ b/HeadController/res/layout/activity_html_screen.xml
@@ -18,6 +18,14 @@
         android:layout_height="200dp"/>
     
     <SurfaceView 
+        android:id="@+id/HeadDirect"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="100dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"/>
+    
+    
+    <SurfaceView 
         android:id="@+id/CameraPreview"
         android:layout_marginTop="100dp"
         android:layout_marginLeft="600dp"
