--- a/HeadController/res/layout/activity_html_screen.xml
+++ b/HeadController/res/layout/activity_html_screen.xml
@@ -10,20 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    
     <com.pisoft.headcontroller.view.HeadView 
         android:id="@+id/Head"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="100dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp"/>
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_height="100dp" 
+        android:layout_width="100dp" />
     
     <SurfaceView 
         android:id="@+id/HeadDirect"
-        android:layout_marginTop="400dp"
-        android:layout_marginLeft="100dp"
-        android:layout_width="200dp"
-        android:layout_height="200dp"/>
-    
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="220dp"
+        android:layout_height="100dp" 
+        android:layout_width="100dp" />
+   
     
     <SurfaceView 
         android:id="@+id/CameraPreview"
